--- a/exo4.html
+++ b/exo4.html
@@ -3,81 +3,128 @@
 <head>
 	<title>Marine Vandromme</title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
-	<a href="devbig.jpg"><img src="devsmall.jpg" alt="Illustration Développeur" title="Cliquez pour agrandir" /></a>
-	<h1>Titre Professionnel Développeur Web et Web Mobile</h1>
+	<header>
+		<img src="IMG_0420.png" alt="Ma photo">
 
-	<h2>Marine Vandromme</h2>
-	<hr>
+		<h1 id="Titre">MARINE VANDROMME <em>Développeuse Web et Web Mobile</em></h1>
 
-	<section><h3>Mes expériences :</h3></section>
-		<ul>
-			<li>12/2018 - 03/2020<br>
-				AGENT DE PRODUCTION<br>
-				Atlantic Billy-Berclau<br>
-				Montage Assemblage Contrôle qualité
-			</li>
-			<br>
+		<p>✉️ marinevandromme@live.fr<br>
+		📱 06 19 05 66 47<br>
+		🏠 Béthune<br>
+		🎂 25 ans<br>
+		📃 Permis B<br>
+		🚘 Véhicule personnel</p>
 
-			<li>03/2018 - 07/2018<br>
-				AGENT DE FABRICATION INDUSTRIELLE<br>
-				PSA - Francaise de Mécanique Douvrin<br>
-				Montage Assemblage Contrôle qualité
-			</li>
-			<br>
+		<h4>🏆 ATOUTS</h4>
 
-			<li>03/2017 - 08/2017<br>
-				AGENT DE CONDITIONNEMENT<br>
-				Eurorol/Cérélia Lièvin<br>
-				Conditionnement Contrôle qualité
-			</li>
-			<br>
+		<p><strong>Détermination :</strong> abandonner ne fait pas partie de mon vocabulaire</p>
+		<p><strong>Autonomie :</strong> je suis capable d'effectuer des tâches ou projets seule</p>
+		<p><strong>Travail en équipe :</strong> le travail en équipe est pour moi une force supplémentaire à la réalisation de projet</p>
+		<p><strong>Capacité d'adaptation :</strong> j'ai toujours eu une facilité à m'adapter. La nouveauté ne me fait pas peur</p>
 
-			<li>06/2015 - 12/2016<br>
-				AGENT DE FACONNAGE<br>
-				Délifrance Labeuvrière<br>
-				Conditionnement Façonnage Contrôle qualité
-			</li>
-		</ul>
-	<hr>
+		<h4>🎯 CENTRES D'INTÊRETS</h4>
 
-	<section><h3>Mes compétences :</h3></section>
+		<p><strong>Sport</strong></p>
+			<ul>
+				<li>Garder la forme</li>
+				<li>Décompresser</li>
+				<li>Se sentir bien</li>
+			</ul>
 
-		<ul>
-			<li>Apple Foundation :<br>
-			Apprentissage du language Swift et SwiftUI<br>
-			Réalisation d'un projet d'application mobile en groupe
-			</li>
-			<br>
+		<p><strong>Voyages</strong></p>
+			<ul>
+				<li>Découvrir le Monde</li>
+				<li>En prendre pleins les yeux</li>
+				<li>Recharger les batteries</li>
+			</ul>
+	</header>
 
-			<li>Codecademy et Open Classrooms :<br>
-			Sites webs pour l'apprentissage des différents languages.<br>
-			Proposants des cours, des projets de mise en pratique, des quizz.
-			</li>
-		</ul>
-	<hr>
+	<div id="bloc">
+		<div id="apropos">
+			<h4>À PROPOS DE MOI</h4>
 
-	<section><h3>Mes formations :</h3></section>
+				<p>Actuellement en formation Titre Professionnel Développeur Web et Web Mobile<br>
+				Je recherche un stage en entreprise de juin 2021 à septembre 2021</p>
+				<p>Débutante, dotée d'une grande motivation !</p>
+				<p>Disponible immédiatement</p>
+		</div>
 
-		<ul>
-			<li>12/2020 - 10/2021<br>
-			TITRE PROFESSIONNEL DEVELOPPEUR WEB ET WEB MOBILE<br>
-			ID Formation Lens
-			</li>
-			<br>
+		<div id="competences">
+			<h4>MES COMPÉTENCES</h4>
+				<div id="container1">
+					<p>HTML5, CSS3</p>
+					<p>JavaScript, PHP</p>
+					<p>Swift, SwiftUI</p>
+				</div>
+				<div id="container2">
+					<p>GitHub</p>
+					<p>Word, Excel, PowerPoint</p>
+					<p>Keynote, iMovie</p>
+				</div>
+		</div>
+			
+		<div>
+			<h4>DIPLÔMES ET FORMATIONS</h4>
 
-			<li>10/2017 - 01/2018<br>
-			AGENT DE FABRICATION INDUSTRIELLE<br>
-			AFPA Lièvin
-			</li>
-			<br>
+				<p class="date">12/2020 - 10/2021</p>
+				<p class="fonction">TITRE PROFESSIONNEL DÉVELOPPEUR WEB ET WEB MOBILE</p>
+				<p class="lieu">ID Formation Lens</p>
 
-			<li>09/2011-06/2014<br>
-			BACCALAUREAT PROFESSIONNEL DE SECRETARIAT<br>
-			Lycée Carnot Bruay-la-Buissière
-			</li>
-		</ul>
+				<p class="date">10/2020 - 11/2020</p>
+				<p class="fonction">FORMATION APPLE SWIFT</p>
+				<p class="lieu">Simplon Roubaix</p>
+
+				<p class="date">10/2017 - 01/2018</p>
+				<p class="fonction">AGENT DE FABRICATION INDUSTRIELLE</p>
+				<p class="lieu">AFPA Lièvin</p>
+
+				<p class="date">09/2011 - 06/2014</p>
+				<p class="fonction">BACCALAURÉAT PROFESSIONNEL DE SECRÉTARIAT</p>
+				<p class="lieu">Lycée Carnot Bruay-la-Buissière</p>
+		</div>
+			
+		<div>
+			<h4>EXPÉRIENCES PROFESSIONNELLES</h4>
+
+				<p class="date">12/2018 - 03/2020</p>
+				<p class="fonction">AGENT DE PRODUCTION</p>
+				<p class="lieu">Atlantic Billy-Berclau</p>
+				<ul class="marge">
+					<li>Montage</li>
+					<li>Assemblage</li>
+					<li>Contrôle qualité</li>
+				</ul>
+
+				<p class="date">03/2018 - 07/2018</p>
+				<p class="fonction">AGENT DE FABRICATION</p>
+				<p class="lieu">PSA - Française de mécanique Douvrin</p>
+				<ul class="marge">
+					<li>Montage</li>
+					<li>Assemblage</li>
+					<li>Contrôle qualité</li>
+				</ul>
+
+				<p class="date">03/2017 - 08/2017</p>
+				<p class="fonction">AGENT DE CONDITIONNEMENT</p>
+				<p class="lieu">EUROROL/Cérélia Lièvin</p>
+				<ul class="marge">
+					<li>Conditionnement</li>
+					<li>Contrôle qualité</li>
+				</ul>
+
+				<p class="date">06/2015 - 12/2016</p>
+				<p class="fonction">AGENT DE FACONNAGE</p>
+				<p class="lieu">Délifrance Labeuvrière</p>
+				<ul class="marge">
+					<li>Conditionnement</li>
+					<li>Façonnage</li>
+					<li>Contrôle qualité</li>
+				</ul>
+		</div>
+	</div>
 </body>
 </html>
